fixed some alignement issues

--- a/index.css
+++ b/index.css
@@ -1,10 +1,13 @@
-
+html{
+  height: 100vh;
+}
 body{
     display: flex;
     height: 100vh;
     margin: 0;
     position:absolute;
     width: 100%;
+    
 }
 
 .centering{
@@ -16,9 +19,11 @@ body{
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-} */
+}
+
 .wrapper{
   width: 100%;
+  height: 100vh;
 }
 
 a.button1{
